<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Album Photo</string>
    <string name="picture">Photo</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="photo">Photo</string>
    <string name="album">Album</string>
    <string name="secret">Private</string>
    <string name="trash">Trash</string>
    <string name="camera">Camera</string>
    <string name="settings">Setting</string>
    <string name="filter">Filter</string>
    <string name="create_album">Create Album</string>
    <string name="add_title">Add Title</string>
    <string name="slide_show">Slide Show</string>
    <string name="add_image">Add Image</string>

    <string name="edit_photo">Edit Image</string>
    <string name="add_to_favorite">Add Image Favorite</string>
    <string name="delete">Delete</string>

    <string name="information">Information</string>
    <string name="addAlbum">Add to album</string>
    <string name="hide_photo">Hide/show photo</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="search_results">Search results</string>
    <string name="exif_data">Information Image</string>
    <string name="unknown">Unknown</string>
    <string name="name">Name</string>
    <string name="producer">Producer</string>
    <string name="model">Model</string>
    <string name="size">Size</string>
    <string name="author">Author</string>
    <string name="location">Location</string>
    <string name="addprivate">Add To Private</string>
    <string name="remove_album">Remove Album</string>
    <string name="list_album">List album</string>
    <string name="album_private">Album Private</string>
    <string name="recently_deleted">Recently deleted</string>
    <string name="utilities">Utilities</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter">Enter</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="create">Create</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="question_for_getting_back_password">Question for getting back password</string>
    <string name="write_your_question">Write your question</string>
    <string name="your_answer_for_the_question_above">Your answer for the question above</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="answer_your_question">Answer your question</string>
    <string name="put_back">Put back</string>
    <string name="multi_select">Multi Select</string>
    <string name="cancel">Cancel</string>
    <string name="find_duplicate">Find duplicate image</string>
    <string name="night_mode">Night Mode</string>
    <string name="night_mode_activated"> Night mode is activated</string>
    <string name="night_mode_deactivated"> Night mode is deactivated</string>
    <string name="languague">Language</string>
    <string name="language_summary" translatable="false">Select your language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="source_code">Source Code</string>
    <string name="contributors">Contributors</string>
    <string name="libraries">Included Libraries</string>

    <string name="simple">Simple</string>
    <string name="fade">Fade</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="depth">Depth</string>
    <string name="spinner">Spinner</string>

</resources>