<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/change_span_count"
        android:title="@string/search"
        android:icon="@drawable/ic_change_span_count"
        app:showAsAction="ifRoom|collapseActionView" />
    <item android:id="@+id/album_item_slideshow"
        android:title="@string/slide_show"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_add_image"
        android:title="@string/add_image"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_remove_album"
        android:title="@string/remove_album"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_change_password"
        android:title="@string/change_password"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_put_back"
        android:title="@string/put_back"
        app:showAsAction="never"/>
</menu>