<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuCamera"
        android:title="@string/camera"
        android:icon="@drawable/ic_camera"
        app:showAsAction="always"
        android:iconTint="?attr/colorOnBackground"/>

    <item android:id="@+id/menuSpanCount"
        android:title="SpanCount"
        android:icon="@drawable/ic_change_span_count"
        app:showAsAction="ifRoom|collapseActionView"
        android:iconTint="?attr/colorOnBackground"/>

    <item android:id="@+id/menuMultiSelectPhoto"
        android:title="@string/multi_select"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom|collapseActionView"
        android:iconTint="?attr/colorOnBackground"/>

    <item android:id="@+id/menuDuplicate"
        android:title="@string/find_duplicate"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom|collapseActionView"
        android:iconTint="?attr/colorOnBackground"/>

    <item android:id="@+id/menuSettings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>