<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:translationZ="90dp">

        <ImageView
            android:id="@+id/img_back_private_album"
            android:layout_width="0dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:src="@drawable/ic_back"
            android:foregroundTint="@color/black"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/album_private"
            android:textAlignment="center"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:padding="20dp"
        android:id="@+id/enterPassView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/enterPass" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:onClick="showForgotPassDialog"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/enter"
                android:id="@+id/btnEnterPass"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:id="@+id/createPassView">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_password"
            android:layout_marginBottom="10dp"
            android:textSize="16dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/createPass" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/confirmPass" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/question_for_getting_back_password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/questionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/write_your_question"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/answerField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/your_answer_for_the_question_above"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/answer" />

        </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnCreatePass"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:text="@string/create" />
        </LinearLayout>



</RelativeLayout>