<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutInformationPhoto"
    android:background="@drawable/background_infomation_photo"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/exif_data"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFD8D8D8"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginStart="10dp"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_date"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="Time"/>
        <TextView
            android:id="@+id/txtInfoTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/unknown"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginStart="10dp"
        android:padding="10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/txtInfoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:text="@string/unknown"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:weightSum="1.0">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_camera"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/producer"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/txtInfoProducer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_photo_model"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/txtInfoModel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/txtInfoModelMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="1.0"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_photo"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/txtInfoSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/txtInfoMP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_weight="0.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textSize="10sp"/>
                <TextView
                    android:id="@+id/txtInfoAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Unknown"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
